--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</head>
 <script src="https://redalert.battleforthenet.com/widget.js" async></script>
 	<body>
-		<marquee><h1>Let's make a mothafuckin website</h1></marquee>
+		<marquee><h1>which .js framework is deprecated today?</h1></marquee>
 					<!--Buttons at the top of the page -->
 					<table>
 						<thead>
